<resources>
    <string name="app_name">Droid Yelp</string>

    <plurals name="lbl_quantity_reviews_1">
        <item quantity="one">%d Review</item>
        <item quantity="other">%d Reviews</item>
    </plurals>

    <plurals name="lbl_quantity_reviews_2">
        <item quantity="one">Review (%d)</item>
        <item quantity="other">Reviews (%d)</item>
    </plurals>

    <string name="lbl_business_distance">%1$.2f km</string>
    <string name="lbl_seekbar_radius">%1$d km</string>

    <string name="btn_done">Done</string>
    <string name="btn_apply_filters">Apply Filters</string>
    <string name="lbl_radius">Radius</string>
    <string name="lbl_categories">Categories</string>

    <string name="lbl_sort_by">Sort By</string>
    <!-- Sort By Items -->
    <string name="lbl_best_match">Best Match</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_review_count">Review Count</string>
    <string name="lbl_distance">Distance</string>

    <string name="lbl_open_now">Open Now</string>

    <string-array name="sort_alias">
        <item>best_match</item>
        <item>rating</item>
        <item>review_count</item>
        <item>distance</item>
    </string-array>

    <string name="lbl_add_category">Add Category</string>
    <string name="hint_category_search">Type anything here..</string>
    <string name="hint_location_search">Search address..</string>
    <string name="hint_business_search">Search business name..</string>
    <string name="lbl_business_name">Business Name</string>
    <string name="lbl_address">Address</string>

    <string name="error_generic">Something went wrong.</string>

    <string name="lbl_tap_retry">Tap to Retry</string>

    <string name="lbl_directions">Directions</string>
    <string name="lbl_operating_hours">Operating Hours</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="error_location_permission">Droid yelp needs location permission.</string>
    <string name="title_permission_denied">Permission Denied</string>
    <string name="lbl_retry">Retry</string>
</resources>
