<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgDefault"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgButtonContainer"
        android:orientation="vertical"
        android:paddingStart="@dimen/mp_half"
        android:paddingEnd="@dimen/mp_half">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_half"
            android:text="@string/lbl_business_name"
            android:textColor="@color/colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBusinessName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/mp_quarter"
            android:layout_marginBottom="@dimen/mp_standard"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_business_search"
            android:maxLength="50"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_address"
            android:textColor="@color/colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPlaces"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/mp_quarter"
            android:layout_marginBottom="@dimen/mp_standard"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_location_search"
            android:maxLength="50"
            android:maxLines="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_address" />
</LinearLayout>